# Sprint_Master_Fabio

./: .gitignore  CMakeLists.txt  README.md
Boost_test/: CMakeLists.txt  algoTest.cpp  execute_all_tests.cpp  mapTest.cpp  nodeTest.cpp  primitiveTest.cpp  setupTest.cpp
Boost_test/primitives_test_files/: output.json  output_list.json  output_list_2.json  output_list_3.json  output_list_4.json
Documentation/html/: algorithms_8cpp.html  algorithms_8cpp__incl.map  algorithms_8cpp__incl.md5  algorithms_8h_source.html  algorithms__utilities_8cpp.html  algorithms__utilities_8cpp__incl.map  algorithms__utilities_8cpp__incl.md5  algorithms__utilities_8h_source.html  annotated.html  classEuclideanHeuristic-members.html  classEuclideanHeuristic.html  classEuclideanHeuristic__coll__graph.map  classEuclideanHeuristic__coll__graph.md5  classGreaterFValue-members.html  classGreaterFValue.html  classHeuristic-members.html  classHeuristic.html  classHeuristic__inherit__graph.map  classHeuristic__inherit__graph.md5  classNode-members.html  classNode.html  classNode__coll__graph.map  classNode__coll__graph.md5  classPrimitive-members.html  classPrimitive.html  classes.html  classopenListCompare-members.html  classopenListCompare.html  control__levels_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  heuristics_8cpp.html  (+53 more)
Documentation/latex/: algorithms_8cpp.tex  algorithms_8cpp__incl.md5  algorithms__utilities_8cpp.tex  algorithms__utilities_8cpp__incl.md5  annotated.tex  classEuclideanHeuristic.tex  classEuclideanHeuristic__coll__graph.md5  classGreaterFValue.tex  classHeuristic.tex  classHeuristic__inherit__graph.md5  classNode.tex  classNode__coll__graph.md5  classPrimitive.tex  classopenListCompare.tex  files.tex  heuristics_8cpp.tex  heuristics_8cpp__incl.md5  heuristics_8h.tex  heuristics_8h__dep__incl.md5  heuristics_8h__incl.md5  hierarchy.tex  map_8cpp.tex  map_8cpp__incl.md5  map__objects_8h.tex  map__objects_8h__dep__incl.md5  map__objects_8h__incl.md5  md_README.tex  refman.tex  structNodeDataEqual.tex  structNodeDataHash.tex  structPrimDataHash.tex  structPrimEqualNodes.tex  structStruct.tex  structnode__data.tex
data/maps_FABIO/: map_FABIO4.json  map_FABIO_quadrata.json  map_FABIO_quadrata2.json  map_FABIO_simple.json  map_FABIO_simple2.json  map_FABIO_simple3.json  map_FABIO_simple_lunga.json
data/maps_tests/: map_2D.json  map_2D_modificato.json  map_2D_reformatted.json  map_lab_2D.json  medium_map.json  sample_map_no_obstacles.json  sample_map_one_obstacle.json  sample_map_one_obstacle_obstruction.json  (+3 more)
include/: algorithms.h  algorithms_utilities.h  control_levels.h  hash_functions.h  heuristics.h  map.h  map_objects.h  parameters.h  primitives.h  setup.h
python_utilities/: gen_random_map.py  primitive_tocells.py  primitive_tocells_FABIO.py  print_map_primitives.py
src/: algorithms.cpp  algorithms_utilities.cpp  heuristics.cpp  main.cpp  map.cpp  map_objects.cpp  primitives.cpp  setup.cpp
(+58 files in other folders)
